# cosmic-cupid-cli

./: .gitignore  pyproject.toml
cache/: kerykeion_geonames_cache.sqlite
src/: engine.py  exporter.py  main.py  test_card.py  ui.py
src/cosmic_cupid.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
